// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render as a primary button 1`] = `
<Button
  className="ui-shared__button sg-bmxt9z-button"
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="sg-1gad0ov-content"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is explicitly defined 1`] = `
<Button
  className="ui-shared__button sg-1cs55nz-button"
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="sg-1jqywej-content"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a regular button if type is omitted 1`] = `
<Button
  className="ui-shared__button sg-bmxt9z-button"
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="sg-1gad0ov-content"
  >
    Press me
  </div>
</Button>
`;

exports[`<Button /> should render as a secondary button 1`] = `
<Button
  className="ui-shared__button sg-se4spe-button"
  disabled={false}
  onClick={null}
  testId="Button"
>
  <div
    className="sg-1gad0ov-content"
  >
    Press me
  </div>
</Button>
`;
